kubernetes/stateful/postgres/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: stateful
  name: postgres
spec:
  serviceName: "postgres"
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres
            - mountPath: /docker-entrypoint-initdb.d/evolve.sql
              name: config-volume
              subPath: evolve.sql
      volumes:
        - name: config-volume
          configMap:
            name: postgres-config
  volumeClaimTemplates:
    - metadata:
        name: postgres
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  namespace: stateful
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
