kubernetes/stateful/postgres/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-virtual-service
  namespace: stateful
spec:
  hosts:
    - postgres.test
  gateways:
    - postgres-gateway
  tcp:
    - match:
        - port: 5432
      route:
        - destination:
            host: postgres
            port:
              number: 5432
